bigger exp role font on mobile, fix MLC name and date

--- a/style.css
+++ b/style.css
@@ -100,6 +100,12 @@ span.highlight { background-color: #ffffd0; }
   flex-shrink: 0;
 }
 
+.exp-role { font-size: 14px; }
+
+@media (max-width: 600px) {
+  .exp-role { font-size: 16px; }
+}
+
 .exp-logo img {
   width: 100%;
   height: 100%;
